Refactor local search and cloning